forge install: chainlink
v2.10.0

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "smart_contract/lib/BokkyPooBahsDateTimeLibrary"]
 	path = smart_contract/lib/BokkyPooBahsDateTimeLibrary
 	url = https://github.com/bokkypoobah/BokkyPooBahsDateTimeLibrary
+[submodule "smart_contract/lib/chainlink"]
+	path = smart_contract/lib/chainlink
+	url = https://github.com/smartcontractkit/chainlink
