--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "smart_contract/lib/forge-std"]
 	path = smart_contract/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "smart_contract/lib/BokkyPooBahsDateTimeLibrary"]
+	path = smart_contract/lib/BokkyPooBahsDateTimeLibrary
+	url = https://github.com/bokkypoobah/BokkyPooBahsDateTimeLibrary
+[submodule "smart_contract/lib/chainlink"]
+	path = smart_contract/lib/chainlink
+	url = https://github.com/smartcontractkit/chainlink
